--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "j4k/oauth2-vkontakte",
+    "name": "zablik/oauth2-vkontakte",
     "description": "Vkontakte provider for league/oauth2-client",
     "keywords": [
         "league",
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php" : ">=5.5",
+        "php" : ">=5.6",
         "league/oauth2-client": "^2.0"
     },
     "require-dev": {
