--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php" : ">=5.6",
+        "php": "^5.6 || ^7.0",
         "league/oauth2-client": "^2.0"
     },
     "require-dev": {
